@@ -1,16 +1,10 @@
 package ru.job4j.io;
 
-
-import ru.job4j.io.duplicates.DuplicatesVisitor;
-import ru.job4j.io.duplicates.FileProperty;
-
 import java.io.File;
-import java.io.FilenameFilter;
 import java.io.IOException;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.List;
-import java.util.function.Predicate;
 
 public class Dir extends SimpleFileVisitor<Path> {
     public static void main(String[] args) throws IOException {
@@ -25,28 +19,30 @@ public class Dir extends SimpleFileVisitor<Path> {
             throw new IllegalArgumentException(String.format("Not directory %s", file.getAbsoluteFile()));
         }
 //        System.out.println(String.format("size : %s", file.getTotalSpace()));
-
-        Files.walkFileTree(Path.of(args[0]), new MyFileVisitor(args[1]));
+//        Path p = Paths.get(args[0]);
+        Files.walkFileTree(Path.of("./"), new MyFileVisitor("class"));
 
     }
 
     public static class MyFileVisitor extends SimpleFileVisitor<Path> {
 
         private String txt;
+//        private String p;
 
         public MyFileVisitor(String txt) {
             this.txt = txt;
+//            this.txt = p;
         }
 
         @Override
         public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-            List<String> files = Files.readAllLines(file);
-            for (String f : files) {
-                if (f.endsWith(txt)) {
-                    System.out.println(file.getFileName());
-                }
-            }
-            return super.visitFile(file, attrs);
+            List<String> lines = Files.readAllLines(file);
+//            for (String l: lines) {
+//                if (l.endsWith(txt)) {
+//                    System.out.println(file.getFileName());
+//                }
+//            }
+            return FileVisitResult.CONTINUE;
         }
     }
 }
